src/test/ui/coercion/coerce-mut.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-mut.rs:5:7
   |
LL |     f(&x);
   |       ^^ types differ in mutability
   |
   = note: expected mutable reference `&'z1 mut i32`
                      found reference `&'z2 {integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
